; ModuleID = '/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__can_diff_tree_to_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__can_diff_tree_to_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_win32_forbidden__can_diff_tree_to_index() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @repo, align 4
  %4 = call i32 @git_repository_head_tree(i32** %2, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @repo, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @git_diff_tree_to_index(i32** %1, i32 %6, i32* %7, i32* null, i32* null)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_diff_num_deltas(i32* %10)
  %12 = call i32 @cl_assert_equal_i(i32 0, i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_diff_free(i32* %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @git_tree_free(i32* %15)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_head_tree(i32**, i32) #1

declare dso_local i32 @git_diff_tree_to_index(i32**, i32, i32*, i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_diff_num_deltas(i32*) #1

declare dso_local i32 @git_diff_free(i32*) #1

declare dso_local i32 @git_tree_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
